Project was finished

--- a/index.html
+++ b/index.html
@@ -10,6 +10,54 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+        <h1>
+            Stay In Touch
+        </h1>
+        <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+        </p>
+    </header>
+    <section class="contact">
+        <div></div>
+        <a href="#" class="phone__item">
+            <i class="fas fa-phone fa-2x"></i>
+            <h1>Our Phone</h1>
+            <p>+0 098-087-7657</p>
+        </a>
+        <a href="#" class="email__item">
+            <i class="fas fa-phone fa-2x"></i>
+            <h1>Our Phone</h1>
+            <p>+0 098-087-7657</p>
+        </a>
+        <a href="#" class="location__item">
+            <i class="fas fa-phone fa-2x"></i>
+            <h1>Our Phone</h1>
+            <p>+0 098-087-7657</p>
+        </a>
+        <div></div>
+    </section>
+    <footer>
+        
+        <div class="links">
+            <a href="#">
+                <i class="fab fa-twitter fa-2x"></i>
+            </a>
+            <a href="#">
+                <i class="fab fa-facebook-f fa-2x"></i>
+            </a>
+            <a href="#">
+                <i class="fab fa-instagram fa-2x"></i>
+            </a>
+            <a href="#">
+                <i class="fab fa-pinterest-p fa-2x"></i>
+            </a>
+            <a href="#">
+                <i class="fab fa-google-plus-g fa-2x"></i>
+            </a>
+        </div>
+        <hr>
+        <p>This page was made by Islam Xiyasov</p>
+    </footer>
 </body>
 </html>
